tests/fixtures/invalid/pow_int_bytes_float.py
# Cannot call pow() with Int, Bytes, Float
x = pow(1, b"hello", 1.0)
